# advanced-rag

./: .gitignore  pyproject.toml  rag.py  schema.sql
docs/: ARCHITECTURE.md  CONTRIBUTING.md  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  SYSTEM_REQUIREMENTS.md  TESTING_GUIDE.md
src/: __init__.py  config.py
src/benchmarks/: __init__.py  load_test.py  performance.py  rag_analysis.py  system_requirements.py
src/core/: __init__.py  circuit_breaker.py  clients.py  database.py
src/generation/: __init__.py  answer.py
src/models/: __init__.py  schemas.py
src/monitoring/: __init__.py  alerts.py  metrics.py
src/pipeline/: __init__.py  rag.py
src/processing/: __init__.py  compression.py  query.py
src/retrieval/: __init__.py  reranking.py  search.py
src/utils/: __init__.py  data_loader.py
