[project]
name = "advanced-rag"
version = "1.0.0"
description = "advanced rag"
requires-python = ">=3.12"
dependencies = [
    # --- The New LangChain v1.0 Stack ---
    # This is the new main package
    "langchain>=1.0.0,<1.1.0",
    # Core is compatible
    "langchain-core>=1.0.0,<1.1.0",
    # Community package updated to a compatible series
    "langchain-community>=0.4.0,<0.5.0",
    # The AWS package you need
    "langchain-aws>=1.0.0,<1.1.0",
    # [!!] Added this to prevent your code from breaking.
    # v1.0 moved old chains/agents here.
    "langchain-classic>=1.0.0,<1.1.0",

    # AWS & Bedrock
    "boto3>=1.34.0,<2.0.0",
    "botocore>=1.34.0,<2.0.0",

    # Vector DB & Search
    "pgvector>=0.2.4,<0.3.0",
    "asyncpg>=0.29.0,<0.30.0",
    "psycopg2-binary>=2.9.9,<3.0.0",

    # --- ML & Embeddings (Updated for Numpy 2.x) ---
    "numpy>=2.3.2,<3.0.0", # The core requirement from langchain-aws
    "scikit-learn>=1.5.0,<2.0.0", # v1.5+ is numpy 2.x compatible
    "pandas>=2.2.0,<4.0.0", # v2.2+ is numpy 2.x compatible

    # Dataset & Evaluation
    "datasets>=2.16.0,<3.0.0",

    # Data & Utils
    "pydantic>=2.5.0,<3.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "rank-bm25>=0.2.2,<0.3.0",
    "sentence-transformers>=2.2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
eval = [
    "beir>=2.0.0,<3.0.0",
    # This is numpy 2.x compatible
    "sentence-transformers>=3.0.0,<3.1.0",
]
